lab3: database - repository works with domain - added order and customer impl - natural id - entity graph - custom queries - projections - liquibase migrations - tests
